# KTH-Introduction-to-Visualization-and-Computer-Graphics-assignment

Assignment02/: task-p1.cpp  task-p2(a).cpp
Assignment02/code/: CMakeLists.txt  Doxyfile.in  README.md
Assignment02/code/cmake/: CGCommon.cmake
Assignment02/code/depend/GLFW-3.0.4/docs/html/: compile.html
Assignment02/code/depend/GLFW-3.0.4/src/: glfw3.pc.in
Assignment02/code/exercises/: CMakeLists.txt
Assignment02/code/exercises/assets/: SolidWirePhong.fs
Assignment02/code/exercises/opengl/: CMakeLists.txt  Camera.cpp  Camera.hpp  IndexedTriangleIO.cpp  Math.hpp  RaytracerWindow.cpp  TriangleGeometry.cpp  TriangleGeometry.hpp  openglConfig.hpp
Assignment02/code/exercises/raytracer/: Image.hpp  Math.hpp  Matrix3.hpp  Vector3.hpp  Vector4.hpp
Assignment02/code/exercises/task/: CMakeLists.txt  task.cpp
Assignment05/depend/: CMakeLists.txt
Assignment05/depend/GLFW-3.0.4/: CMakeLists.txt
Assignment05/depend/GLFW-3.0.4/docs/: CMakeLists.txt  Doxyfile.in  compile.dox
Assignment05/depend/GLFW-3.0.4/src/: CMakeLists.txt  glfwConfig.cmake.in
Assignment05/depend/glew-1.10.0/: CMakeLists.txt
Assignment05/depend/glew-1.10.0/src/: glew.c
Assignment05/exercises/assets/: ParticleShader.fs  ParticleShader.gs  ParticleShader.vs  SolidWirePhong.vs
Assignment05/exercises/opengl/: BVTree.cpp  BVTree.hpp  Collision.hpp  CollisionGeometry.cpp  CollisionGeometry.hpp  CollisionScene.cpp  CollisionScene.hpp  IndexedTriangleIO.hpp  Intersection.hpp  Math.cpp  OpenGL.hpp  RaytracerWindow.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Assignment05/exercises/raytracer/: BVHIndexedTriangleMesh.cpp  BVHIndexedTriangleMesh.hpp  BVTree.cpp  BVTree.hpp  BezierPatchMesh.cpp  BezierPatchMesh.hpp  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CheckerMaterial.cpp  CheckerMaterial.hpp  ConstantMaterial.cpp  ConstantMaterial.hpp  DiffuseMaterial.cpp  DiffuseMaterial.hpp  Helper.hpp  Image.cpp  IndexedTriangleIO.cpp  IndexedTriangleIO.hpp  IndexedTriangleMesh.cpp  IndexedTriangleMesh.hpp  Light.cpp  Light.hpp  Material.hpp  Matrix2.hpp  Matrix4.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PhongMaterial.cpp  PhongMaterial.hpp  Plane.cpp  Plane.hpp  Ray.hpp  Raytracer.cpp  Raytracer.hpp  Renderable.cpp  Renderable.hpp  Scene.cpp  (+10 more)
Assignment05/exercises/raytracer_task1/: raytracer_task1.cpp
Assignment05/exercises/raytracer_task2/: CMakeLists.txt  raytracer_task2.cpp
