ADD_SUBDIRECTORY(GLFW-3.0.4)
ADD_SUBDIRECTORY(glew-1.10.0)

SET(GLEW_INCLUDE_DIR ${GLEW_INCLUDE_DIR} PARENT_SCOPE)
SET(GLEW_LIBRARY ${GLEW_LIBRARY} PARENT_SCOPE)
SET(GLEW_FOUND ${GLEW_FOUND} PARENT_SCOPE)

SET(GLFW_INCLUDE_DIR ${GLFW_INCLUDE_DIR} PARENT_SCOPE)
SET(GLFW_LIBRARY ${GLFW_LIBRARY} PARENT_SCOPE)
SET(GLFW_FOUND ${GLFW_FOUND} PARENT_SCOPE)