SET(sources src/glew.c include/GL/glew.h include/GL/wglew.h)
OPTION(GLEW_NO_GLU "Compile GLEW without glu" OFF)

IF(MSVC)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS )
ADD_DEFINITIONS(-DGLEW_BUILD)
ENDIF()
IF( NOT GLEW_NO_GLU )
ADD_DEFINITIONS( -DGLEW_NO_GLU )
ENDIF( )

INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include)
ADD_LIBRARY(glew SHARED ${sources})
TARGET_LINK_LIBRARIES(glew  ${OPENGL_LIBRARIES} )

SET(GLEW_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
GET_PROPERTY(GLEW_LIBRARY TARGET glew PROPERTY LOCATION)
IF(MSVC)
  STRING(REGEX REPLACE ".dll" ".lib" GLEW_LIBRARY ${GLEW_LIBRARY})
ENDIF()
SET(GLEW_LIBRARY ${GLEW_LIBRARY} PARENT_SCOPE)
SET(GLEW_FOUND TRUE PARENT_SCOPE)